# PayrollCalculator

./: .gitignore  .replit  README.md  add_test_user.py  api_spec.md  auth.py  check_users.py  config.py  database.py  debug_session.py  email_utils.py  index.html  main.py  migrate_db.py  notifications.py  payroll.db  payslip_generator.py  pyproject.toml  replit.nix  salary_calculator.py  server.py  sidebar_icons.py  style.css  styles.css  utils.py
.streamlit/: config.toml
attached_assets/: Pasted--How-the-Salary-Calculation-System-Works-The-salary-calculation-system-determines-the-Net--1738087184779.txt  Pasted--Instructions-for-AI-Agent-Streamlit-App-Navigation-Cleanup-Task-Overview-Modify-a-Streamlit-p-1742506776628.txt  Pasted--Nigerian-Salary-Calculator-Copy-Improvement-Guide-This-document-outlines-all-text-changes-neede-1740913206887.txt  Pasted--Payslip-Generation-Module-Requirements-Document-1-Overview-1-1-Purpose-The-Payslip-Gener-1741251418181.txt  Pasted--Pension-Calculation-Guide-for-Payroll-System-Understanding-Pension-Contributions-1-Manda-1738492193116.txt  Pasted--UI-UX-Improvement-Instructions-for-Nigerian-Payroll-System-Task-Overview-Implement-the-followi-1742494334388.txt  Pasted-Changes-Needed-in-Current-System-1-CSV-Template-Updates-Add-these-columns-to-your-CSV-template-1738492619887.txt  Pasted-Product-Requirements-Document-Complete-Payroll-Processing-System-1-Introduction-This-document-outl-1741702918849.txt  Pasted-Product-Requirements-Document-Employee-Management-Feature-1-Introduction-This-document-outlines-th-1741701255796.txt  (+3 more)
js/: main.js  (+2 more)
(+8 files in other folders)
