[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pdfkit>=1.0.0",
    "reportlab>=4.3.1",
    "secure-smtplib>=0.1.1",
    "streamlit>=1.41.1",
    "weasyprint>=64.1",
]
